// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EBillEdit component renders correctly EMAIL tmhPostpaid account 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
>
  <View
    elevation={5}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "flex": 1,
          "marginHorizontal": -1,
          "overflow": "hidden",
          "shadowColor": "#303C46",
          "shadowOffset": Object {
            "height": 2,
            "width": 1,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1,
        },
        Object {
          "flex": 0,
          "marginBottom": 12,
          "marginTop": 7,
        },
      ]
    }
  >
    <View
      onPress={null}
      style={
        Array [
          Object {
            "zIndex": 1,
          },
          Object {},
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "borderWidth": 0,
              "elevation": 3,
              "shadowColor": "#303C46",
              "shadowOffset": Object {
                "height": 2,
                "width": 1,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#F93E60",
                  "paddingHorizontal": 5,
                },
                Object {
                  "borderBottomColor": "#303C46",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E9E9EA",
                      "padding": 10,
                    },
                    Object {
                      "backgroundColor": "#303C46",
                      "marginHorizontal": -5,
                      "padding": 10,
                    },
                  ],
                  Object {},
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#303C46",
                    },
                    Array [
                      Object {
                        "color": "#000000",
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#FFFFFF",
                      },
                    ],
                    Object {
                      "fontFamily": "SukhumvitSet-Bold",
                    },
                  ]
                }
              >
                9876543210
              </Text>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#303C46",
                "fontSize": 24,
              },
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                },
                Object {
                  "bottom": 9.6,
                  "marginBottom": -9.6,
                },
                Object {},
              ],
              Object {
                "fontFamily": "iservice",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E9E9EA",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -15,
          "padding": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 18,
          }
        }
      >
        Enter your information below
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          SMS
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={false}
          keyboardType="numeric"
          maxLength={10}
          multiline={false}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          placeholder="Enter mobile number"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#B9C1C9",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value="abc@gmail.com"
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 1)",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 0,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          Email
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={true}
          multiline={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="Enter email address"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#303C46",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(249, 62, 96, 1)",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 30,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 14,
            "textAlign": "center",
          }
        }
      >
        When apply this service, True Group shall terminate paper bill and send e-Billing by selected electronic bill channel
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#F93E60",
          "borderRadius": 50,
          "opacity": 1,
          "padding": 10,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-Bold",
                },
              ]
            }
          >
            Save
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EBillEdit component renders correctly EMAIL tol account 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
>
  <View
    elevation={5}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "flex": 1,
          "marginHorizontal": -1,
          "overflow": "hidden",
          "shadowColor": "#303C46",
          "shadowOffset": Object {
            "height": 2,
            "width": 1,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1,
        },
        Object {
          "flex": 0,
          "marginBottom": 12,
          "marginTop": 7,
        },
      ]
    }
  >
    <View
      onPress={null}
      style={
        Array [
          Object {
            "zIndex": 1,
          },
          Object {},
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "borderWidth": 0,
              "elevation": 3,
              "shadowColor": "#303C46",
              "shadowOffset": Object {
                "height": 2,
                "width": 1,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#F93E60",
                  "paddingHorizontal": 5,
                },
                Object {
                  "borderBottomColor": "#303C46",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E9E9EA",
                      "padding": 10,
                    },
                    Object {
                      "backgroundColor": "#303C46",
                      "marginHorizontal": -5,
                      "padding": 10,
                    },
                  ],
                  Object {},
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#303C46",
                    },
                    Array [
                      Object {
                        "color": "#000000",
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#FFFFFF",
                      },
                    ],
                    Object {
                      "fontFamily": "SukhumvitSet-Bold",
                    },
                  ]
                }
              >
                9876543210
              </Text>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#303C46",
                "fontSize": 24,
              },
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                },
                Object {
                  "bottom": 9.6,
                  "marginBottom": -9.6,
                },
                Object {},
              ],
              Object {
                "fontFamily": "iservice",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E9E9EA",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -15,
          "padding": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 18,
          }
        }
      >
        Enter your information below
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          SMS
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={false}
          keyboardType="numeric"
          maxLength={10}
          multiline={false}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          placeholder="Enter mobile number"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#B9C1C9",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value="abc@gmail.com"
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 1)",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 0,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          Email
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={true}
          multiline={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="Enter email address"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#303C46",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(249, 62, 96, 1)",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 30,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 14,
            "textAlign": "center",
          }
        }
      >
        When apply this service, True Group shall terminate paper bill and send e-Billing by selected electronic bill channel
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#F93E60",
          "borderRadius": 50,
          "opacity": 1,
          "padding": 10,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-Bold",
                },
              ]
            }
          >
            Save
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EBillEdit component renders correctly SMS tmhPostpaid account 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
>
  <View
    elevation={5}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "flex": 1,
          "marginHorizontal": -1,
          "overflow": "hidden",
          "shadowColor": "#303C46",
          "shadowOffset": Object {
            "height": 2,
            "width": 1,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1,
        },
        Object {
          "flex": 0,
          "marginBottom": 12,
          "marginTop": 7,
        },
      ]
    }
  >
    <View
      onPress={null}
      style={
        Array [
          Object {
            "zIndex": 1,
          },
          Object {},
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "borderWidth": 0,
              "elevation": 3,
              "shadowColor": "#303C46",
              "shadowOffset": Object {
                "height": 2,
                "width": 1,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#F93E60",
                  "paddingHorizontal": 5,
                },
                Object {
                  "borderBottomColor": "#303C46",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E9E9EA",
                      "padding": 10,
                    },
                    Object {
                      "backgroundColor": "#303C46",
                      "marginHorizontal": -5,
                      "padding": 10,
                    },
                  ],
                  Object {},
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#303C46",
                    },
                    Array [
                      Object {
                        "color": "#000000",
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#FFFFFF",
                      },
                    ],
                    Object {
                      "fontFamily": "SukhumvitSet-Bold",
                    },
                  ]
                }
              >
                9876543210
              </Text>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#303C46",
                "fontSize": 24,
              },
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                },
                Object {
                  "bottom": 9.6,
                  "marginBottom": -9.6,
                },
                Object {},
              ],
              Object {
                "fontFamily": "iservice",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E9E9EA",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -15,
          "padding": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 18,
          }
        }
      >
        Enter your information below
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          SMS
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={false}
          keyboardType="numeric"
          maxLength={10}
          multiline={false}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          placeholder="Enter mobile number"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#B9C1C9",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value="9876543210"
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(249, 62, 96, 1)",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 30,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          Email
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={false}
          multiline={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="Enter email address"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#B9C1C9",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 1)",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 0,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 14,
            "textAlign": "center",
          }
        }
      >
        When apply this service, True Group shall terminate paper bill and send e-Billing by selected electronic bill channel
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#F93E60",
          "borderRadius": 50,
          "opacity": 1,
          "padding": 10,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-Bold",
                },
              ]
            }
          >
            Save
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EBillEdit component renders correctly SMS tol account 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
>
  <View
    elevation={5}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "flex": 1,
          "marginHorizontal": -1,
          "overflow": "hidden",
          "shadowColor": "#303C46",
          "shadowOffset": Object {
            "height": 2,
            "width": 1,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1,
        },
        Object {
          "flex": 0,
          "marginBottom": 12,
          "marginTop": 7,
        },
      ]
    }
  >
    <View
      onPress={null}
      style={
        Array [
          Object {
            "zIndex": 1,
          },
          Object {},
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "borderWidth": 0,
              "elevation": 3,
              "shadowColor": "#303C46",
              "shadowOffset": Object {
                "height": 2,
                "width": 1,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#F93E60",
                  "paddingHorizontal": 5,
                },
                Object {
                  "borderBottomColor": "#303C46",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E9E9EA",
                      "padding": 10,
                    },
                    Object {
                      "backgroundColor": "#303C46",
                      "marginHorizontal": -5,
                      "padding": 10,
                    },
                  ],
                  Object {},
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#303C46",
                    },
                    Array [
                      Object {
                        "color": "#000000",
                        "fontSize": 18,
                      },
                      Object {
                        "color": "#FFFFFF",
                      },
                    ],
                    Object {
                      "fontFamily": "SukhumvitSet-Bold",
                    },
                  ]
                }
              >
                9876543210
              </Text>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#303C46",
                "fontSize": 24,
              },
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                },
                Object {
                  "bottom": 9.6,
                  "marginBottom": -9.6,
                },
                Object {},
              ],
              Object {
                "fontFamily": "iservice",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E9E9EA",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -15,
          "padding": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 18,
          }
        }
      >
        Enter your information below
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          SMS
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={false}
          keyboardType="numeric"
          maxLength={10}
          multiline={false}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          placeholder="Enter mobile number"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#B9C1C9",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value="abc@gmail.com"
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 1)",
                "borderColor": "rgba(0, 0, 0, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 0,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#E9E9EA",
          "borderBottomWidth": 1,
          "marginTop": 5,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#303C46",
              "fontFamily": "SukhumvitSet-SemiBold",
              "fontSize": 18,
              "marginRight": 30,
            }
          }
        >
          Email
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          editable={true}
          multiline={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="Enter email address"
          placeholderTextColor="#B9C1C9"
          returnKeyType="done"
          style={
            Object {
              "color": "#303C46",
              "flex": 1,
              "fontFamily": "SukhumvitSet-Light",
              "fontSize": 18,
              "marginRight": 25,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 30,
              "justifyContent": "center",
              "width": 60,
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "width": 60,
              }
            }
          />
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "rgba(249, 62, 96, 1)",
                "borderColor": "rgba(249, 62, 96, 1)",
                "borderRadius": 15,
                "borderWidth": 1,
                "height": 30,
                "left": 30,
                "position": "absolute",
                "width": 30,
                "zIndex": 3,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#303C46",
            "fontFamily": "SukhumvitSet-SemiBold",
            "fontSize": 14,
            "textAlign": "center",
          }
        }
      >
        When apply this service, True Group shall terminate paper bill and send e-Billing by selected electronic bill channel
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#F93E60",
          "borderRadius": 50,
          "opacity": 1,
          "padding": 10,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-Bold",
                },
              ]
            }
          >
            Save
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
